# sosc

./: Cargo.toml
assets/: vls.yaml
src/: event.rs  lib.rs  schedule.rs  sosc.rs  voiceline.rs
